# Agentic-Track

./: .dockerignore  .env.openwebui.example  .gitignore  404.html  Dockerfile.rag-api  README.md  docker-compose.openwebui.yml  index.html  mkdocs.yml  openwebui.bat  requirements-docs.txt  requirements.txt  sitemap.xml  starter.bat
agentic-rag/: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
agentic-rag/app/: api.py  cli.py
agentic-rag/docs/: 01-architecture.md  02-ingestion-strategy.md  03-prompt-design.md  04-evaluation-methodology.md  05-testing-strategy.md
agentic-rag/evaluation/: README.md  __init__.py  corpus_eval_pack.json  eval_answers.csv  eval_answers.jsonl  eval_lib.py  eval_scores.json  generate_eval_pack.py  judge.py  metrics.py  report.py  run_eval_pack.py  runner.py  score_eval_pack.py
agentic-rag/evaluation/reports/: eval_report_2026-03-27_1523.json  eval_report_2026-03-27_1523.md  eval_report_2026-03-27_2140.json  eval_report_2026-03-27_2140.md  eval_report_2026-03-28_0051.json  eval_report_2026-03-28_0051.md
agentic-rag/src/: __init__.py  config.py
agentic-rag/src/knowledge/: __init__.py  bronze.py  chunking.py  gold.py  ingestion.py  schemas.py  silver.py  versioning.py
agentic-rag/src/llm_interface/: __init__.py  chains.py  model.py  prompts.py
agentic-rag/src/orchestration/: __init__.py  graph.py  nodes.py  state.py
agentic-rag/tests/: __init__.py
docs/: index.md
tutorials/14-mcp/: 14-mcp.py  14-model-context-protocol-mcp.md  README.md  pyproject.toml  test_output.txt
(+460 files in other folders)
