[project]
name = "local-dev-mcp-project"
version = "0.1.0"
description = "Local MCP developer utilities server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]",
  "pytest",
]

[project.scripts]
local-dev-mcp = "local_dev_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_dev_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]